Correction faute de frappe dans config.json

--- a/scripts/config.json
+++ b/scripts/config.json
@@ -5,7 +5,7 @@
 	},
 	"controls": {
 		"forward": ["UPARROWKEY", ""],
-		"backward": ["UPARROWKEY", ""],
+		"backward": ["DOWNARROWKEY", ""],
 		"turn_right": ["RIGHTARROWKEY", ""],
 		"turn_left": ["LEFTARROWKEY", ""],
 		"arme_plus": ["PADPLUSKEY", ""],
